# ikea_ru_sale_notifier

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: actions.yml
