[tool.poetry]
name = "IKEA ru sale notifier"
version = "0.0.1"
description = "Checks whether the russian IKEA started accepting orders through separate form"
authors = ["Anton Ivanov <outage-stylus.0u@icloud.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.3.0"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
pylint = "^2.14.4"
pre-commit = "^2.19.0"
flake8 = "^4.0.1"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
